Fix minor issues and add CORS for frontend